Cleanup YangBoundProcessor